// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="flex justify-content-between"
>
  <div
    className="flex direction-row align-items-center"
  >
    <div
      className="mr-2"
    >
      <a
        href="/workspaces"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Prisme.ai
      </a>
    </div>
  </div>
</div>
`;

exports[`should render both 1`] = `
<div
  className="flex justify-content-between"
>
  <div
    className="flex direction-row align-items-center"
  >
    <div
      className="mr-2"
    >
      <a
        href="/workspaces"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Prisme.ai
      </a>
    </div>
    <div>
      Left content
    </div>
  </div>
  <div>
    <div>
      Right content
    </div>
  </div>
</div>
`;

exports[`should render left content 1`] = `
<div
  className="flex justify-content-between"
>
  <div
    className="flex direction-row align-items-center"
  >
    <div
      className="mr-2"
    >
      <a
        href="/workspaces"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Prisme.ai
      </a>
    </div>
    <div>
      Left content
    </div>
  </div>
</div>
`;

exports[`should render right content 1`] = `
<div
  className="flex justify-content-between"
>
  <div
    className="flex direction-row align-items-center"
  >
    <div
      className="mr-2"
    >
      <a
        href="/workspaces"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Prisme.ai
      </a>
    </div>
  </div>
  <div>
    <div>
      Right content
    </div>
  </div>
</div>
`;
